# AUV-navigation-and-Control

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md
src/DVL/: package.xml  setup.cfg  setup.py
src/DVL/DVL/: DVL.py  DVL_Logger.py
src/LOS/: package.xml  setup.cfg  setup.py
src/LOS/LOS/: LOS.py  LOS_Core.py  LOS_Main.py
src/Mission_Manager/: package.xml  setup.cfg  setup.py
src/Mission_Manager/Mission_Manager/: Mission_Manager.py
src/Navigation/: package.xml  setup.py
src/Navigation/Navigation/: Navigation.py
src/PID/: package.xml  setup.cfg  setup.py
src/PID/PID/: PID.py  PID_Core.py  PID_Main.py  PID_params.py
src/Pressure/: package.xml  setup.cfg  setup.py
src/Pressure/Pressure/: Pressure.py
src/Thruster_Vectoring/: package.xml  setup.cfg  setup.py
src/Thruster_Vectoring/Thruster_Vectoring/: Thruster_Vectoring.py  Thruster_Vectoring_Params.py
src/World_Click_Map/: package.xml  setup.cfg  setup.py
src/World_Click_Map/World_Click_Map/: World_Click_Map.py
src/auv_bringup/: package.xml  setup.cfg  setup.py
src/auv_bringup/config/: mavros_apm_filtered.yaml
src/auv_bringup/launch/: auv_stack.launch.py  full_system.launch.py  sensor_only.launch.py
