<?xml version="1.0"?>
<package format="3">
  <name>PID</name>
  <version>0.0.1</version>
  <description>PID controller for AUV yaw and pitch</description>
  <maintainer email="auv-bachelor@users.noreply.github.com">AUV Bachelor Group</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
