<?xml version="1.0"?>
<package format="3">
  <name>Pressure</name>
  <version>0.0.1</version>
  <description>Bar30 pressure sensor via MAVLink to ROS 2</description>
  <maintainer email="auv-bachelor@users.noreply.github.com">AUV Bachelor Group</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
